public class Course {
    private int id;
    private String name;

    public int getID() {
        return id;
    }

    public String getName() {
        return name;
    }

    // Getters and setters
    public void setId(int id) {
        this.id = id;
    }

    public void setName(String name) {
        this.name = name;
    }
}
