public class Lecture extends Course {
    private int lectureID;

    public int getID() {
        return lectureID;
    }

    // Getters and setters
    public void setLectureID(int lectureID) {
        this.lectureID = lectureID;
    }
}
