public class Lecturer extends User {
    public void manageCourse(Course course) {
        // Manage the course
    }
}
