public class Student extends User {
    public void registerForCourse(Course course) {
        // Register the student for the course
    }
}
